<?xml version='1.0' encoding='utf-8'?>
<package format="2">
  <name>rospkg</name>
  <version>0.0.0</version>
  <description>Standalone Python library for the ROS package system.</description>

  <maintainer email="kwc@willowgarage.com">Ken Conley</maintainer>
  <author email="kwc@willowgarage.com">Ken Conley</author>

  <license>BSD</license>

  <url>http://ros.org/wiki/rospkg</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
    <build_type>ament_python</build_type>
  </export>
</package>
